auto-overflow fix

--- a/public/css/component.sass
+++ b/public/css/component.sass
@@ -60,6 +60,8 @@
 
     border-bottom: 0.08em solid $card-border-color
 
+    overflow-x: auto
+
     span.level
       display: block
       width: $column-level-width / 2
@@ -98,6 +100,7 @@
   .bottom
     height: $column-bottom-height
 
+    overflow-y: auto
 
     > *
       line-height: 1.75em
