--- a/public/css/header.sass
+++ b/public/css/header.sass
@@ -147,8 +147,6 @@ header
     .body
       width: 100%
 
-      overflow-x: scroll
-
       h2
         font-size: 1em
         margin: 1em 0.875em
